force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__ContentDocumentId__c</fullName>
    <description>Content Document ID</description>
    <externalId>true</externalId>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>