force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__ContentSize__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__ContentSize__c</fullName>
    <label>Content Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>