force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__FileExtension__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__FileExtension__c</fullName>
    <description>File Extension</description>
    <inlineHelpText>File Extension</inlineHelpText>
    <label>File Extension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>