force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__FileOwner__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__FileOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Content Document Owner</description>
    <inlineHelpText>Content Document Owner</inlineHelpText>
    <label>File Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Explorer_Files</relationshipName>
    <type>Lookup</type>
</CustomField>