force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__FileType__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__FileType__c</fullName>
    <description>File Type</description>
    <inlineHelpText>File Type</inlineHelpText>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>