force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated.</description>
    <label>Is Deleted?</label>
    <type>Checkbox</type>
</CustomField>