force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__LinkedEntityId__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__LinkedEntityId__c</fullName>
    <description>Linked Entity Id</description>
    <externalId>true</externalId>
    <label>Linked Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>