force-app/main/default/objects/qsyd_FE__FileExplorerFile__c/fields/qsyd_FE__Tags__c.field-meta.xml
<CustomField>
    <fullName>qsyd_FE__Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>